--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -1,6 +1,5 @@
-:plugin: example
+:plugin: hash_select
 :type: filter
-// Update header with plugin name
 
 ///////////////////////////////////////////
 START - GENERATED VARIABLES, DO NOT EDIT!
@@ -15,73 +14,59 @@ END - GENERATED VARIABLES, DO NOT EDIT!
 
 [id="plugins-{type}s-{plugin}"]
 
-=== Example filter plugin
+=== Hash_select filter plugin
 
 include::{include_path}/plugin_header.asciidoc[]
 
 ==== Description
 
-Add plugin description here
-
-// Format anchors and links to support generated ids for versioning
-// Sample anchor: [id="plugins-{type}s-{plugin}-setting_name"]
-// Sample link: <<plugins-{type}s-{plugin}-setting_name>>
+This filter is used to remove entries from a hash field based on key inclusion or exclusion rules.
 
 [id="plugins-{type}s-{plugin}-options"]
-==== Example Filter Configuration Options
+==== Hash_select Filter Configuration Options
+
+This plugin supports the following configuration options plus the <<plugins-{type}s-{plugin}-common-options>> described later.
 
 [cols="<,<,<",options="header",]
 |=======================================================================
 |Setting |Input type|Required
-| <<plugins-{type}s-{plugin}-a_setting_name>> |<<boolean,boolean>>|No
-| <<plugins-{type}s-{plugin}-another_setting_name>> |<<hash,hash>>|No
-| <<plugins-{type}s-{plugin}-setting_name_3>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-setting_name_4>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-setting_name_5>> |<<array,array>>|No
+| <<plugins-{type}s-{plugin}-field>> |<<string,string>>|Yes
+| <<plugins-{type}s-{plugin}-include_keys>> |list of <<string,string>>|No
+| <<plugins-{type}s-{plugin}-exclude_keys>> |list of <<string,string>>|No
 |=======================================================================
 
-[id="plugins-{type}s-{plugin}-a_setting_name"]
-===== `a_setting_name` 
+Also see <<plugins-{type}s-{plugin}-common-options>> for a list of options supported by all
+filter plugins.
 
-  * Value type is <<boolean,boolean>>
-  * Default value is `true`
+&nbsp;
 
-Add description here
+[id="plugins-{type}s-{plugin}-field"]
+===== `field`
 
-[id="plugins-{type}s-{plugin}-another_setting_name"]
-===== `another_setting_name` 
-
-  * Value type is <<hash,hash>>
-  * Default value is `{}`
-
-Add description here
-
-[id="plugins-{type}s-{plugin}-setting_name_3"]
-===== `setting_name_3` 
-
+  * This is a required setting.
   * Value type is <<string,string>>
-  * Default value is `{}`
+  * There is no default value for this setting.
 
-Add description here
+The hash field to select.
 
-[id="plugins-{type}s-{plugin}-setting_name_4"]
-===== `setting_name_4` 
+[source,ruby]
+    field => "[prometheus][labels]"
 
-  * Value type is <<number,number>>
-  * Default value is `0`
+[id="plugins-{type}s-{plugin}-include_keys"]
+===== `include_keys`
 
-Add description here
+  * Value type is a list of <<string,string>>
+  * Default value is `[]`
 
-[id="plugins-{type}s-{plugin}-setting_name_5"]
-===== `setting_name_5` 
+Keys to include in the hash.
 
-  * Value type is <<array,array>>
-  * Default value is {}
+[id="plugins-{type}s-{plugin}-exclude_keys"]
+===== `exclude_keys`
 
-Add description here
+  * Value type is a list of <<string,string>>
+  * Default value is `[]`
 
-// The full list of Value Types is here: 
-// https://www.elastic.co/guide/en/logstash/current/configuration-file-structure.html
+Keys to exclude from the hash.
 
 [id="plugins-{type}s-{plugin}-common-options"]
 include::{include_path}/{type}.asciidoc[]
